src/CommentLayers.less
@import 'variables.less';

.cd-comment-underlay {
	position: absolute;
	z-index: -1;

	// Can't do that for comments in compact mode due to the need to coordinate with the overlay menu
	.cd-reformattedComments & {
		mix-blend-mode: color;
	}

	// Backgrounds don't work at all when an ancestor has a background and mix-blend-mode is set, e.g.
	// https://en.wikipedia.org/wiki/Wikipedia:Village_pump_(proposals)#c-DanielRigal-20260417111500-Banning_product_comparison_articles
	.cd-reformattedComments .cd-commentLayersContainer-parent-relative & {
		mix-blend-mode: initial;
	}
}

:root {
	--cd-comment-hovered-background-color: var(
		--background-color-interactive-subtle,
		#f8f9fa
	);
	--cd-comment-target-marker-color: #edab00;
	--cd-comment-target-background-color: var(
		--background-color-warning-subtle,
		#fdf2d5
	);
	--cd-comment-target-hovered-background-color: #fcecc2;
	--cd-comment-linked-marker-color: var(--color-progressive, #36c);
	--cd-comment-linked-background-color: var(
		--background-color-progressive-subtle,
		#e8eeff
	);
	--cd-comment-linked-hovered-background-color: var(
		--background-color-progressive-subtle--hover,
		#d9e2ff
	);
	--cd-comment-new-marker-color: #00af89;
	--cd-comment-new-background-color: #e8fff1;
	--cd-comment-new-hovered-background-color: #d6ffe7;
	--cd-comment-own-marker-color: #9f33cc;
	--cd-comment-own-background-color: #faf3fc;
	--cd-comment-own-hovered-background-color: #f6eafa;
	--cd-comment-deleted-marker-color: var(--color-destructive, #d73333);
	--cd-comment-deleted-background-color: var(
		--background-color-destructive-subtle,
		#fee7e6
	);
	--cd-comment-deleted-hovered-background-color: #fddbd9;
}

.darkTheme() {
	--cd-comment-target-hovered-background-color: #3d2500;
	--cd-comment-new-marker-color: #008000;
	--cd-comment-new-background-color: #002600;
	--cd-comment-new-hovered-background-color: #003000;
	// --cd-comment-own-marker-color: #9f33cc;
	--cd-comment-own-background-color: #2e0d38;
	--cd-comment-own-hovered-background-color: #3c1149;
	--cd-comment-deleted-hovered-background-color: #521615;

	.cd-commentLayersContainer.cd-commentLayersContainer.cd-commentLayersContainer {
		background: initial !important;
	}
}

@media screen {
	html.skin-theme-clientpref-night {
		.darkTheme();
	}
}

@media screen and (prefers-color-scheme: dark) {
	html.skin-theme-clientpref-os {
		.darkTheme();
	}
}

/*
 * The hierarchy of layer types (starting with the highest priority):
 * 1. Target
 * 2. Linked
 * 3. Changed (quick flash with green)
 * 4. Deleted
 * 5. Own
 * 6. New
 * 7. Hovered (but each hovered subtype has more priority than non-hovered)
 */

.cd-comment-underlay-hovered,
.cd-comment-overlay-menu {
	background-color: var(--cd-comment-hovered-background-color);
}

.cd-comment-underlay-deleted.cd-comment-underlay-deleted {
	background-color: var(--cd-comment-deleted-background-color);
}

.cd-comment-underlay-deleted.cd-comment-underlay-deleted.cd-comment-underlay-hovered,
.cd-comment-overlay-deleted.cd-comment-overlay-deleted
	.cd-comment-overlay-menu {
	background-color: var(--cd-comment-deleted-hovered-background-color);
}

.cd-comment-underlay-changed.cd-comment-underlay-changed {
	background-color: var(--cd-comment-new-background-color);
}

.cd-comment-underlay-changed.cd-comment-underlay-changed.cd-comment-underlay-hovered,
.cd-comment-overlay-changed.cd-comment-overlay-changed
	.cd-comment-overlay-menu {
	background-color: var(--cd-comment-new-hovered-background-color);
}

.cd-comment-underlay-target.cd-comment-underlay-target {
	background-color: var(--cd-comment-target-background-color);
}

.cd-comment-underlay-target.cd-comment-underlay-target.cd-comment-underlay-hovered,
.cd-comment-overlay-target.cd-comment-overlay-target .cd-comment-overlay-menu {
	background-color: var(--cd-comment-target-hovered-background-color);
}

.cd-comment-overlay {
	position: absolute;
}

.cd-comment-overlay-marker {
	position: absolute;
	top: 0;
	width: calc(var(--cd-comment-marker-width) / var(--cd-pixel-deviation-ratio));
	height: 100%;
	z-index: 2;

	// NOTE: the order of these is not random: the latter flags have a priority (so, e.g. it a comment
	// id target and new, it's highlighted as target).

	.cd-comment-overlay-new &,
	.cd-comment-overlay-changed.cd-comment-overlay-changed & {
		background-color: var(--cd-comment-new-marker-color);
	}

	.cd-comment-overlay-own & {
		background-color: var(--cd-comment-own-marker-color);
	}

	.cd-comment-overlay-deleted & {
		background-color: var(--cd-comment-deleted-marker-color);
	}

	.cd-comment-overlay-linked.cd-comment-overlay-linked & {
		background-color: var(--cd-comment-linked-marker-color);
	}

	.cd-comment-overlay-target.cd-comment-overlay-target & {
		background-color: var(--cd-comment-target-marker-color);
	}
}

.cd-comment-overlay-innerWrapper {
	position: absolute;
	z-index: 1;
	bottom: 0;
	font-size: var(--font-size-medium, 0.875rem);
	display: none;
	flex-direction: row;
	direction: var(--cd-direction-user);
	inset-inline-end: 0;

	.cd-comment-overlay-hovered & {
		display: flex;
	}
}

.cd-comment-overlay-gradient {
	width: 1.5em;
	display: inline-block;
	-moz-user-select: none;
	user-select: none;
	background-image: linear-gradient(
		var(--cd-gradient-user-start),
		var(--cd-comment-hovered-background-color),
		rgba(255, 255, 255, 0)
	);

	.cd-comment-overlay-deleted.cd-comment-overlay-deleted & {
		background-image: linear-gradient(
			var(--cd-gradient-user-start),
			var(--cd-comment-deleted-hovered-background-color),
			rgba(255, 255, 255, 0)
		);
	}

	.cd-comment-overlay-changed.cd-comment-overlay-changed & {
		background-image: linear-gradient(
			var(--cd-gradient-user-start),
			var(--cd-comment-new-hovered-background-color),
			rgba(255, 255, 255, 0)
		);
	}

	// Gradient can't be animated. Not with jquery.ui.
	.cd-comment-overlay-target.cd-comment-overlay-target & {
		background-image: none;
	}
}

.cd-comment-overlay-menu {
	display: inline-flex;
	padding-inline-start: 0.5em;
	flex-direction: row-reverse;
	pointer-events: all;

	> .oo-ui-buttonElement {
		line-height: 1.4285714em;
	}

	// When the user language and content language point in opposite directions, align the menu with
	// the _start_ of the line. Don't care about RTL content in LTR content and vice versa here -
	// those are too narrow and unimportant.
	.ltr.sitedir-rtl &,
	.rtl.sitedir-ltr & {
		margin-inline: 0 0.5em;
	}
}

.cd-comment-overlay-marker,
.cd-comment-overlay-line {
	// This calculation is the same as in Thread#updateLine() but with -1px.
	inset-inline-start: calc(-1px / var(--cd-pixel-deviation-ratio-for-1px));
}

.cd-comment-overlay-line-gapCloser {
	position: absolute;
	top: 0;
	inset-inline-start: calc(-1px / var(--cd-pixel-deviation-ratio-for-1px));
	width: calc(1px / var(--cd-pixel-deviation-ratio-for-1px));
	height: 100%;
	background-color: var(--border-color-subtle, #c8ccd1);
}

.cd-comment-button-ooui.cd-comment-button-ooui {
	margin: 0;

	// Override OOUI's `.oo-ui-buttonElement-frameless.oo-ui-labelElement:first-child`, `.oo-ui-buttonElement-frameless.oo-ui-iconElement:first-child`
	&.oo-ui-buttonElement-frameless:first-child {
		margin-inline: 0;
	}

	> .oo-ui-buttonElement-button {
		padding-block: 0;
		padding-inline: @comment-button-ooui-padding;
	}
}

body:not(.skin-monobook)
	.cd-comment-button-ooui-icon.cd-comment-button-ooui-icon
	> .oo-ui-buttonElement-button {
	padding-top: 1.4285714em;
	min-width: unset;
	padding-inline-start: 1.4285714em;
	padding-inline-end: calc(2 * @comment-button-ooui-padding);

	> .oo-ui-iconElement-icon {
		inset-inline-start: @comment-button-ooui-padding;
	}
}

body:not(.skin-monobook)
	.cd-comment-button-thank.cd-comment-button-thank
	> .oo-ui-buttonElement-button
	> .oo-ui-iconElement-icon,
body:not(.skin-monobook)
	.cd-comment-button-edit.cd-comment-button-edit
	> .oo-ui-buttonElement-button
	> .oo-ui-iconElement-icon,
body:not(.skin-monobook)
	.cd-comment-button-fix.cd-comment-button-fix
	> .oo-ui-buttonElement-button
	> .oo-ui-iconElement-icon,
body:not(.skin-monobook)
	.cd-comment-button-delete.cd-comment-button-delete
	> .oo-ui-buttonElement-button
	> .oo-ui-iconElement-icon {
	width: 1.14285714em;
	min-width: 1.14285714em;
	inset-inline-start: calc(@comment-button-ooui-padding + 2px);
}

body:not(.skin-monobook)
	.cd-comment-button-edit.cd-comment-button-edit
	> .oo-ui-buttonElement-button
	> .oo-ui-iconElement-icon {
	inset-block-start: -1px;
}

// Fix button icon
.cd-comment-button-ooui .oo-ui-icon-fix {
	background-image: url(../assets/wrench.svg);
}

.cd-commentLayersContainer {
	position: relative;
	pointer-events: none;
	direction: var(--cd-direction-content);

	&-parent-relative {
		position: relative;
		z-index: 0;

		.mw-parser-output & {
			display: flow-root;

			// `display: flow-root` should do the job of `overflow: hidden` or `overflow: auto` if it's
			// set for an element. `overflow: auto` (present in
			// https://en.wikipedia.org/wiki/Template:Discussion_top, for example) can create a scrollbar
			// in some cases.
			overflow: unset !important;
		}
	}
}

